@@ -111,6 +111,7 @@ Please note that our support for the checkout block is still experimental and th
 * Add - Add compatibility between Multi-Currency and WooCommerce UPS shipping extension.
 * Add - Add compatibility between Multi-Currency and WooCommerce FedEx shipping extension.
 * Fix - Fix decimal error with shipping calculations with Multi-Currency.
+* Add - Add support for float type values for quantity.
 * Fix - Allow payment_intent_succeeded webhook to handle orders without intent_id attached.
 * Add - Add compatibility between Multi-Currency and WooCommerce Product Add Ons version 4.3.0 and higher.
 
